# xml-builder

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: builder.rs  lib.rs  utils.rs  xml.rs  xmlcontent.rs  xmlelement.rs  xmlerror.rs  xmlversion.rs
src/traits/: mod.rs  to_xmlelement.rs
tests/: tests.rs
