[package]
name = "xml-builder"
version = "0.5.2"
authors = ["LIAUD Corentin <corentin.liaud@orange.fr>"]
description = "Easy and highly-configurable XML builder/writer"
keywords = ["xml"]
categories = ["data-structures"]
readme = "README.md"
license = "MIT"
edition = "2021"
repository = "https://github.com/cocool97/xml-builder"